<resources>
    <string name="tab_home">首页</string>
    <string name="category">分类</string>
    <string name="store">店铺</string>
    <string name="shopping_cart">购物车</string>
    <string name="mine">我的</string>
    <string name="app_name">basemall</string>
    <string name="modlogin_phone_login">手机号登陆</string>
    <string name="modlogin_input_phone_number">请输入手机号</string>
    <string name="modlogin_input_account_number">请输入账号</string>
    <string name="modlogin_input_validate_code">请输入验证码</string>
    <string name="modlogin_please_input_password">请输入密码</string>
    <string name="modlogin_get_identifying_code">获取验证码</string>
    <string name="modlogin_forget_password">忘记密码？</string>
    <string name="modlogin_no_account_go_register">没有账号，去注册</string>
    <string name="modlogin_login">登录</string>
    <string name="modlogin_pwd_login">密码登录</string>
    <string name="modlogin_sms_login">短信登录</string>
    <string name="modlogin_use_third_account_login">第三方登录</string>
    <string name="modlogin_please_install_wechat">请先安装微信客户端</string>
    <string name="register_quick">快捷注册</string>
    <string name="modlogin_please_input_invite_code">邀请码（选填）</string>
    <string name="basemall_confirm">确定</string>
    <string name="no_bind_phone">您还没绑定手机号噢</string>
    <string name="bind_phone_info">
        根据国家互联网信息办公室发布的《移动互联网应用程序信息服务管理规定》自2016年8月20日起，要求互联网注册用户
        基于移动电话号码等真实身份信息进行实名认证，所以需要您完成绑定手机号的操作。
    </string>
    <string name="i_know">我知道了</string>
    <string name="re_get_verification_code">重新获取验证码</string>
    <string name="please_login_with_wechat">请使用微信重新登录</string>
    <string name="bind_phone_finish">完成绑定</string>
    <string name="bind_phone">绑定手机</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="remained">为保障个人利益请上传本人真实信息以及收款方式</string>
    <string name="send">发送</string>
    <string name="receive">接收</string>
    <string name="take_to_public_bag">提取到公链包</string>
    <string name="watch_details">查看明细</string>
    <string name="about_cny_num">≈%1$s CNY</string>
    <string name="not_apply">可申请</string>
    <string name="wait_review">申请中</string>
    <string name="review_pass">审核通过</string>
    <string name="review_faile">审核失败</string>
    <string name="upgrade">不可申请</string>
    <string name="take_out_to_wallet">提取到以太坊钱包</string>
    <string name="please_input_wallet_address">请输入以太坊钱包地址</string>
    <string name="please_input_take_out_num">请输入需要提取数目</string>
    <string name="all">全部</string>
    <string name="take_out_remind_info">
        注：请核对以太坊钱包地址，提取到以太坊钱\n包地址，如有错误，一经发出，无法挽回
    </string>
    <string name="please_input_property_password">请输入资产密码</string>
    <string name="dialog_please_confirm">请确认</string>
    <string name="next_step">下一步</string>
    <string name="please_input_password">请输入密码</string>
    <string name="take_out_success">提取成功</string>
    <string name="finish">完成</string>
    <string name="take_out_num">提取金额</string>
    <string name="handling_charge_num">手续费</string>
    <string name="finish_num">到账金额</string>
    <string name="recharge_remind_info">*请不要转入除ETH以外的币种，否则将无法\n找回</string>
    <string name="receive_money_phone">收款账号:%1$s</string>
    <string name="modlogin_account_password_login">账号密码登录</string>
    <string name="modlogin_get_code">获取验证码</string>
    <string name="modlogin_please_input_code">请输入验证码</string>
    <string name="modlogin_please_input_password_again">请再次输入密码</string>
    <string name="modlogin_confirm">确定</string>
    <string name="modlogin_register">注册</string>
    <string name="modlogin_go_login">已有账号，去登录</string>
    <string name="modlogin_read_and_agree">我已阅读并同意</string>
    <string name="modlogin_terms_of_service">《服务条款》</string>
    <string name="reget_auth_code">秒后重新获取</string>
    <string name="please_input_right_phone">请输入正确的手机号码</string>
    <string name="mall_please_input_right_email">请输入正确的邮箱</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="password_min_six">密码长度最小为6位</string>
    <string name="please_input_bind_phone">请输入绑定的手机号</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new_password_again">请再次输入新密码</string>
    <string name="please_input_new_password_error">您输入的密码有误！\n 请再次输入</string>
    <string name="app_upgrade_title">发现新版本</string>
    <string name="app_later_update">稍后更新</string>
    <string name="app_now_update">马上更新</string>
    <string name="transfer_to_BHB">转换NEHI</string>
    <string name="transfer_to_HA">转换为HA</string>
    <string name="transfer_to_TBE">转换为TBE</string>
    <string name="please_input_suggestion">请填写您的意见或建议...</string>
    <string name="please_input_suggestion_first">请先输入您的意见或建议...</string>
    <string name="phone_number_format_not_incorrect">请输入正确的手机号</string>
    <string name="is_identitfy">已认证</string>
    <string name="not_identitfy">未认证</string>
    <string name="click_update">点击上传</string>
    <string name="reupdate">重新上传</string>
    <string name="app_search_hint">输入宝贝关键字</string>
    <string name="app_search_history">历史搜索</string>
    <string name="app_clear">清空</string>
    <string name="app_hot_search">热门搜索</string>
    <string name="app_empty_result_hint">无搜索结果</string>
    <string name="transition_store">storeImage</string>
    <string name="transition_store_name">storeName</string>
    <string name="format_money_unit_meter">%1$s</string>
    <string name="format_total_good">%1$d件商品</string>
    <string name="format_total_good_price_tip">共%1$d件商品&#160;&#160;总计：</string>
    <string name="format_sales_volume">销量%1$s笔</string>
    <string name="format_follow">%1$d人收藏</string>
    <string name="format_enter_store">%1$s入驻</string>
    <string name="format_stock">库存%1$s</string>
    <string name="format_earn_score">购买获得%1$s贝</string>
    <string name="format_comment_num">评价（%1$s）</string>
    <string name="format_x_num">x%1$s</string>
    <string name="all_good">全部商品</string>
    <string name="head_image">头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="birthday">生日</string>
    <string name="phone">手机号</string>
    <string name="change">修改</string>
    <string name="confirm">确定</string>
    <string name="exit_launch">退出登录</string>
    <string name="warm_remind">温馨提示</string>
    <string name="confirm_logout">确定退出登录吗?</string>
    <string name="confirm_read">您确定全部标记已读吗？</string>
    <string name="remind_text">订单商品存在退款情况，请完成退款后再发货</string>
    <string name="person_transition_avatar">userAvatar</string>
    <string name="person_transition_name">userName</string>
    <string name="input_new_nick_name">请输入新昵称</string>
    <string name="nick_name_not_with_space">昵称前后不能有空格，请检查</string>
    <string name="nick_name_not_all_space">昵称不能为空，请检查</string>
    <string name="save">保存</string>
    <string name="transfer_money">转赠金额</string>
    <string name="send_eth">发送ETH</string>
    <string name="confirm_put_in">确认投入</string>
    <string name="take_out">提前取出</string>
    <string name="send_ha">发送金额</string>
    <string name="send_tbe">发送TBE</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="input_new_phone">请输入新手机号码</string>
    <string name="password_manager">密码管理</string>
    <string name="address_manager">地址管理</string>
    <string name="common_question">常见问题</string>
    <string name="suggestion_feedback">反馈客服</string>
    <string name="about_us">关于我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="information_push">信息推送</string>
    <string name="cache_num">%1$dM</string>
    <string name="code">邀请码：%1$s</string>
    <string name="invite_phone">收款手机号：%1$s</string>
    <string name="cny">%1$sCNY</string>
    <string name="can_use">可用：%1$s</string>
    <string name="exit_login">退出登录</string>
    <string name="app_version_name">版本：V%1$s</string>
    <string name="goods_sell_num">销量%1$s笔</string>
    <string name="store_goods_num">%1$s件商品</string>
    <string name="select_all">全选</string>
    <string name="unselect_all">取消全选</string>
    <string name="format_coupon_limit">满%1$s可用</string>
    <string name="format_room_last_num">%1$s间</string>
    <string name="format_coupon_name">平台优惠券·%1$s专享</string>
    <string name="coupon_rule_info">满%1$s可用。不可以与其它优惠券同享，仅支持在线支付专用。</string>
    <string name="coupon_total_num">共%1$s张</string>
    <string name="order_state_accounting">等待系统核算运费</string>
    <string name="order_state_wait_pay">待付款</string>
    <string name="order_state_wait_send">等待卖家发货</string>
    <string name="order_state_wait_accept">卖家已发货</string>
    <string name="order_state_wait_comment">已收货</string>
    <string name="order_state_success">交易完成</string>
    <string name="order_state_refund">退款退货</string>
    <string name="wait_accounting">等待系统核算</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_delete">删除订单</string>
    <string name="order_remind">提醒发货</string>
    <string name="remind">提示</string>
    <string name="order_logistics">查看物流</string>
    <string name="order_go_pay">去付款</string>
    <string name="order_confirm_accept">确认收货</string>
    <string name="order_go_comment">去评价</string>
    <string name="order_read_detail">查看详情</string>
    <string name="order_refund_ing">退款中</string>
    <string name="order_refund_ok">退款完成</string>
    <string name="format_remark">买家留言：%1$s</string>
    <string name="format_invoice">发票抬头：%1$s</string>
    <string name="format_order_number">订单编号：%1$s</string>
    <string name="format_order_time">下单时间：%1$s</string>
    <string name="format_refund_no">退款编号：%1$s</string>
    <string name="format_apply_time">申请时间：%1$s</string>
    <string name="format_logistic_number">物流单号：%1$s</string>
    <string name="format_receive_address">收货地址%1$s</string>
    <string name="basemall_confirm_pay">确认支付 %1$s</string>
    <string name="basemall_pay_time">付款时间：%1$s</string>
    <string name="mall_title_digital_price">数字资产支付</string>
    <string name="mall_title_real_price">实付款</string>
    <string name="invoice_information_tip">
        1.开票金额为用户实际支付的金额（不含礼物卡与不支持该发票类型的商品实付金额）。\n
        2.未随箱寄出的纸质发票会在发货后15-30个工作日单独寄出。\n
        3.单笔订单只支持开具一种类型的发票。\n
        4.年购订单发票随每期子单寄出。</string>
    <string name="personal">个人</string>
    <string name="no">无</string>
    <string name="format_order_receive">收货人：%1$s&#160;&#160;%2$s</string>
    <string name="order_refund_goods_agree">商家已同意您的退货退款申请，请填写物流单号</string>
    <string name="order_refund_wait">您已成功发起退款申请，请耐心等待商家处理</string>
    <string name="format_goods_specs_tip">规格：%1$s</string>
    <string name="format_number">数量：%1$s件</string>
    <string name="format_refund_refuse">拒绝原因：%1$s</string>
    <string name="format_refund_reason">退款原因：%1$s</string>
    <string name="format_refund_money_total">退款金额：%1$s</string>
    <string name="format_refund_num">申请件数：%1$s</string>
    <string name="format_refund_time">申请时间：%1$s</string>
    <string name="format_refund_number">退款编号：%1$s</string>
    <string name="bhb_account">NEHI可用额度：%1$s</string>
    <string name="ha_account">可用额度：%1$s</string>
    <string name="tbe_account">TBE可用额度：%1$s</string>
    <string name="ha_name">可用%1$s</string>
    <string name="ha_unit_price">%1$s单价</string>
    <string name="ha_transfer">转换%1$s数量</string>
    <string name="basemall_not_receive">未收到货物</string>
    <string name="basemall_receive_good">未收到货物</string>
    <string name="mall_applause_rate">好评度：%1$s</string>
    <string name="input_hint_password_again">请再次输入密码</string>
    <string name="input_hint_invite_code">请输入邀请码</string>
    <string name="input_hint_code">请输入验证码</string>
    <string name="input_img_code">请输入图文验证</string>
    <string name="obtain">获取</string>
    <string name="obtain_check_code">获取验证码</string>
    <string name="password_reset_success">密码重置成功，请牢记！</string>
    <string name="password_error_cancel">取消</string>
</resources>