<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_20dp_top_solid_white"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="25dp"
        android:paddingRight="17dp"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lines="1"
                android:text="@string/please_input_property_password"
                android:textColor="@color/gray_1B252D"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="doClick"
                android:padding="5dp"
                android:src="@mipmap/ic_cancel_black" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_input_password"
                style="@style/textWidthWight1"
                android:background="@drawable/bg_radius_2dp_solid_f5f7f8"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:textColorHint="@color/gray_C1C7D7" />

            <TextView
                android:id="@+id/tv_next_step1"
                style="@style/normalTextView"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/next_step"
                android:textColor="#999999"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_auth_code"
                    style="@style/textWidthWight1"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_radius_2dp_solid_f5f7f8"
                    android:hint="@string/please_input_auth_code"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="@color/gray_C1C7D7" />

                <TextView
                    android:id="@+id/tv_get_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:text="@string/modlogin_get_code"
                    android:textColor="#ff3a7beb"
                    android:textSize="14sp" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_next_step2"
                style="@style/normalTextView"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/next_step"
                android:textColor="#999999"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</layout>